syntax = "proto3";

import "google/api/annotations.proto";

option csharp_namespace = "Electrify.Server.Protos";

package insertClient;

service InsertClient {
  rpc InsertClient(InsertClientRequest) returns (InsertClientResponse) {
    option (google.api.http) = {
	  post: "/v1/insertClient"
	  body: "*"
	};
  }
}

message InsertClientRequest{
  string id = 1;
  string userId = 2;
}

message InsertClientResponse{
  bool success = 1;
}